# funcode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.entangled/: db.sqlite
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  index.html  make.bat
examples/: example.ipynb  parallel.ipynb
lit/: index.md
src/funcode/: __init__.py  funcode.py  integrators.py  iterators.py  odes.py
tests/: test_funcode.py  test_integrators.py  test_odes.py  test_solve.py
