[tool.poetry]
name = "funcode"
version = "0.1.0"
description = "Funtional approach to ordinary differential equations solver"
authors = ["Pablo Rodriguez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
numpy = "^1.22.3"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
