[tool.poetry]
name = "funcode"
version = "0.1.0"
description = "Funtional approach to ordinary differential equations solver"
authors = ["Pablo Rodriguez"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
numpy = "^1.22.3"
ipykernel = "^6.13.0"
Sphinx = "^4.5.0"
myst-nb = "^0.14.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
matplotlib = "^3.5.1"
pandocfilters = "^1.5.0"
pandoc-eqnos = "^2.5.0"
pandoc-fignos = "^2.4.0"
entangled-filters = "^0.8.3"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
